samples/_failures_safe/1761153476_85ccb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b9e4ad2.c: In function ‘main’:
./samples/SAFE/__tmp_0b9e4ad2.c:152:18: error: expected ‘)’ at end of input
  152 |         if (u < 0
      |            ~     ^
      |                  )
./samples/SAFE/__tmp_0b9e4ad2.c:152:9: error: expected declaration or statement at end of input
  152 |         if (u < 0
      |         ^~
./samples/SAFE/__tmp_0b9e4ad2.c:152:9: error: expected declaration or statement at end of input
